--- a/_includes/youtube.html
+++ b/_includes/youtube.html
@@ -1,5 +1,5 @@
 <hr class="transp">
 <div class="ytube-video-container">
-<iframe width="560" height="315" src="{{ page.videofeature }}" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/{{ include.id }}" frameborder="0" allowfullscreen></iframe>
 </div>
 <hr class="transp">
